--- a/src/app/tools-list/tools-list.page.html
+++ b/src/app/tools-list/tools-list.page.html
@@ -12,10 +12,12 @@
   <ion-row class="tools-container">
     <ion-text class="tools-title">Your Favorite Tools</ion-text>
     <ion-row class="tool-list-container">
-      <ion-row class="tool-list" *ngFor="let tool of favortiesTools" (click)="openToolPage(tool.id)">
+      <ion-row class="tool-list" *ngFor="let tool of favortiesTools">
         <img class="favorite-icon" src="/assets/tools/icons/favorite.png" (click)="removeFavorite(tool)" />
-        <ion-icon class="tool-icon" src="/assets/tools/{{tool.id}}.svg"></ion-icon>
-        <ion-text class="tool-title">{{ tool.title }}</ion-text>
+        <ion-row class="tool-container" (click)="openToolPage(tool.id)">
+          <ion-icon class="tool-icon" src="/assets/tools/{{tool.id}}.svg"></ion-icon>
+          <ion-text class="tool-title">{{ tool.title }}</ion-text>
+        </ion-row>
       </ion-row>
     </ion-row>
     <ion-row *ngIf="!favortiesTools.length" class="favorite-tool-message">
@@ -26,12 +28,14 @@
   <ion-row class="tools-container" *ngFor="let toolCatagory of appCatagories">
     <ion-text class="tools-title">{{ toolCatagory }} Tools</ion-text>
     <ion-row class="tool-list-container">
-      <ion-row class="tool-list" *ngFor="let tool of appTools[toolCatagory]" (click)="openToolPage(tool.id)">
+      <ion-row class="tool-list" *ngFor="let tool of appTools[toolCatagory]">
         <img class="favorite-icon"
           [src]="favoriteToolIds.includes(tool.id) ? '/assets/tools/icons/favorite.png' : '/assets/tools/icons/un-favorite.png'"
           (click)="favoriteToolIds.includes(tool.id) ? removeFavorite(tool) : addFavorite(tool)" />
-        <ion-icon class="tool-icon" src="/assets/tools/{{tool.id}}.svg"></ion-icon>
-        <ion-text class="tool-title">{{ tool.title }}</ion-text>
+        <ion-row class="tool-container" (click)="openToolPage(tool.id)">
+          <ion-icon class="tool-icon" src="/assets/tools/{{tool.id}}.svg"></ion-icon>
+          <ion-text class="tool-title">{{ tool.title }}</ion-text>
+        </ion-row>
       </ion-row>
     </ion-row>
   </ion-row>
