--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -68,10 +68,10 @@
   --ion-color-medium-tint: #9d9fa6;
 
   /** light **/
-  --ion-color-light: #f4f5f8;
-  --ion-color-light-rgb: 244, 245, 248;
-  --ion-color-light-contrast: #000000;
-  --ion-color-light-contrast-rgb: 0, 0, 0;
+  --ion-color-light: none;
+  --ion-color-light-rgb: none;
+  --ion-color-light-contrast: none;
+  --ion-color-light-contrast-rgb: none;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 
