--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -83,6 +83,7 @@
   --border-color: #cccccc;
   --light-red: #df5663;
   --info-cyan-blue: #17a2b8;
+  --pale-yellow: #ffe082;
 }
 
 // customize default ion properties 
