--- a/src/app/components/calculation/calculator/calculator.component.scss
+++ b/src/app/components/calculation/calculator/calculator.component.scss
@@ -75,9 +75,17 @@
   }
 }
 
+.calculation-error-text {
+  display: flex;
+  margin: 5px;
+  font-size: 14px;
+  color: var(--ion-color-danger);
+  margin-bottom: 0;
+}
+
 .history-card {
-  margin: 0;
-  margin-top: 10px;
+  position: relative;
+  margin: 10px 0;
   color: var(--dark-400);
   border: 1px solid var(--info-cyan-blue);
   border-bottom: none;
