--- a/src/app/components/calculation/bmi-calculator/bmi-calculator.component.scss
+++ b/src/app/components/calculation/bmi-calculator/bmi-calculator.component.scss
@@ -25,7 +25,7 @@
   }
 
   .bmi-health {
-    font-size: 18px;
+    font-size: 5vw;
     text-align: center;
     color: var(--info-cyan-blue);
     font-weight: bold;
