--- a/src/app/components/calculation/discount-calculator/discount-calculator.component.scss
+++ b/src/app/components/calculation/discount-calculator/discount-calculator.component.scss
@@ -1,6 +1,7 @@
 .calc-card {
   margin: 5px;
   border-radius: 10px;
+  border: 1.5px solid var(--border-color);
 
   .input-field {
     font-size: 1.2em;
