--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -84,6 +84,11 @@
   --light-red: #df5663;
   --info-cyan-blue: #17a2b8;
   --pale-yellow: #ffe082;
+
+  /** bmi colors **/
+  --orange: #FFA500;
+  --green: #008000;
+  --red: #FF0000;
 }
 
 // customize default ion properties 
