--- a/src/app/components/calculation/bmi-calculator/bmi-calculator.component.html
+++ b/src/app/components/calculation/bmi-calculator/bmi-calculator.component.html
@@ -3,7 +3,7 @@
     <ion-row class="speedometer">
       <ion-text class="bmi-value">{{ bmi.toFixed(1) }}</ion-text>
     </ion-row>
-    <ion-text class="bmi-health">{{ healthRangeText }}</ion-text>
+    <ion-text class="bmi-health" [ngClass]="healthRangeClass">{{ healthRangeText }}</ion-text>
   </ion-row>
   <ion-item>
     <ion-label position="floating">Height (cm)</ion-label>
