--- a/src/app/tools-preview/tools-preview.page.scss
+++ b/src/app/tools-preview/tools-preview.page.scss
@@ -1,5 +1,17 @@
-ion-title {
-    padding: 0;
+.toolbar-row {
+    min-height: 38px;
+    display: grid;
+    grid-template-columns: 32px 1fr;
+
+    ion-icon {
+        width: 100%;
+        height: 100%;
+    }
+
+    ion-title {
+        padding: 0;
+        margin-left: 10px;
+    }
 }
 
 ion-content {
