--- a/src/app/components/calculation/discount-calculator/discount-calculator.component.html
+++ b/src/app/components/calculation/discount-calculator/discount-calculator.component.html
@@ -6,7 +6,7 @@
       <ion-button shape="round" class="calculate-button" [disabled]="!(originalPrice && discountPercent)" (click)="calculateDiscount()">Calculate</ion-button>
     </ion-card-content>
   </ion-card>
-  <ion-card *ngIf="(originalPrice && discountPercent && discountedPrice)" class="result-card">
+  <ion-card *ngIf="discountedPrice && savedAmount" class="result-card">
     <ion-card-header class="result-header">Result</ion-card-header>
     <ion-card-content class="result-content">
       <ion-label class="result-label">Final Price: {{ discountedPrice }}</ion-label>
