--- a/src/app/components/date-time-tools/analog-time/analog-time.component.html
+++ b/src/app/components/date-time-tools/analog-time/analog-time.component.html
@@ -1,3 +1,17 @@
-<p>
-  analog-time works!
-</p>
+<ion-content class="analog-display">
+  <ion-grid class="main-section">
+    <ion-row class="clock">
+      <ion-row class="outer-clock-face">
+        <ion-row class="marking marking-one"></ion-row>
+        <ion-row class="marking marking-two"></ion-row>
+        <ion-row class="marking marking-three"></ion-row>
+        <ion-row class="marking marking-four"></ion-row>
+        <ion-row class="inner-clock-face">
+          <ion-row #hourHand class="hand hour-hand"></ion-row>
+          <ion-row #minHand class="hand min-hand"></ion-row>
+          <ion-row #secondHand class="hand second-hand"></ion-row>
+        </ion-row>
+      </ion-row>
+    </ion-row>
+  </ion-grid>
+</ion-content>
