--- a/src/app/components/date-time-tools/digital-time/digital-time.component.html
+++ b/src/app/components/date-time-tools/digital-time/digital-time.component.html
@@ -1,3 +1,13 @@
-<p>
-  digital-time works!
-</p>
+<ion-content>
+  <ion-grid class="digital-clock">
+    <ion-col class="clock">
+      <ion-row class="days-week">
+        <ion-col class="days" *ngFor="let day of daysOfWeek; let i = index" [class.active]="i === currentDayIndex">
+          {{ day }}
+        </ion-col>
+      </ion-row>
+      <ion-row class="time">{{ currentTime | date: 'hh:mm:ss' }} <span class="am-pm">{{ amPm }}</span></ion-row>
+      <ion-row class="date">{{ currentTime | date: 'MMMM d, y' }}</ion-row>
+    </ion-col>
+  </ion-grid>
+</ion-content>
