--- a/src/app/components/date-time-tools/analog-time/analog-time.component.html
+++ b/src/app/components/date-time-tools/analog-time/analog-time.component.html
@@ -1,5 +1,5 @@
-<ion-content class="analog-display">
-  <ion-grid class="main-section">
+<ion-content>
+  <ion-grid class="analog-display">
     <ion-row class="clock">
       <ion-row class="outer-clock-face">
         <ion-row class="marking marking-one"></ion-row>
@@ -10,6 +10,7 @@
           <ion-row #hourHand class="hand hour-hand"></ion-row>
           <ion-row #minHand class="hand min-hand"></ion-row>
           <ion-row #secondHand class="hand second-hand"></ion-row>
+          <ion-row class="center-circle"></ion-row>
         </ion-row>
       </ion-row>
     </ion-row>
