--- a/src/app/components/date-time-tools/digital-time/digital-time.component.scss
+++ b/src/app/components/date-time-tools/digital-time/digital-time.component.scss
@@ -1,30 +1,66 @@
 .digital-clock {
-  margin-top: 65%;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: var(--pale-yellow);
+  border-radius: 16px;
+  padding: 15px;
+  border: 2px solid var(--border-color);
+
+  .holder {
+    width: 100%;
+    justify-content: center;
+    position: absolute;
+    top: -20px;
+    left: 50%;
+    transform: translate(-50%, 0px);
+
+    ion-row {
+      width: 18px;
+      height: 18px;
+      background: var(--dark-400);
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+      border: 1px solid var(--border-color);
+      border-bottom: none;
+    }
+
+    .left {
+      margin-right: 50vw;
+    }
+  }
 
   .clock {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #1c1b1b;
-    border: 25px solid var(--ion-color-primary);
+    background-color: var(--dark-400);
+    border-radius: 3px;
+    padding: 10px 5px;
+    border: 2px solid var(--border-color);
 
-    .days {
-      font-size: 6px;
-      margin-top: 0.5rem;
-      color: gray;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+    .days-week {
+      width: 100%;
+      margin-bottom: 0.5rem;
+      justify-content: center;
 
-      &.active {
-        color: #ffffff;
+      .days {
+        font-size: 2.4vw;
+        padding: 0 1vw;
+        color: var(--grayish-white);
+  
+        &.active {
+          color: var(--pale-yellow);
+        }
       }
     }
 
     .time {
       font-size: 32px;
-      color: #eae5e5;
+      color: var(--grayish-white);
 
       .am-pm {
         margin-left: 9px;
@@ -34,7 +70,7 @@
     .date {
       font-size: 14px;
       margin-top: 0.5rem;
-      color: #eae5e5;
+      color: var(--grayish-white);
     }
   }
 }
