--- a/src/app/components/calculation-tools/age-calculator/age-calculator.component.html
+++ b/src/app/components/calculation-tools/age-calculator/age-calculator.component.html
@@ -12,7 +12,7 @@
       <ion-text>Total Days: {{ age.totalDays }} days.</ion-text>
     </ion-card-content>
   </ion-card>
-  <ion-modal [isOpen]="isOpen" [initialBreakpoint]="0.57" [breakpoints]="[0, 0.25, 0.5, 0.75]" handle="false" (willDismiss)="onWillDismiss($event)">
+  <ion-modal [isOpen]="isOpen" [initialBreakpoint]="0.57" [breakpoints]="[0, 0.25, 0.5, 0.75]" handle="false" (willDismiss)="onWillDismiss()">
     <ng-template>
       <ion-datetime
         color="secondary"
