--- a/src/app/pages/splash/splash.page.scss
+++ b/src/app/pages/splash/splash.page.scss
@@ -25,7 +25,7 @@ ion-content {
 
 .splash-spinner {
     margin-top: 16px;
-    --color: var(--pale-yellow);
+    --color: var(--white);
     position: absolute;
     bottom: 12%;
 }
