--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -118,6 +118,7 @@ ion-item {
   --padding-start: 0;
   --padding-end: 0;
   --background: transperent;
+  --inner-padding-end: 0;
 }
 
 .material-icons {
