--- a/src/app/components/calculation-tools/age-calculator/age-calculator.component.html
+++ b/src/app/components/calculation-tools/age-calculator/age-calculator.component.html
@@ -1,10 +1,11 @@
 <ion-content>
   <ion-item lines="none">
-    <ion-label>Enter your DOB</ion-label>
-    <ion-input #dateInput appDateFormat [appDateFormat]="'DD-MM-YYYY'" placeholder="DD-MM-YYYY" [maxlength]="10" [(ngModel)]="dob" (ionInput)="onDateChange()"></ion-input>
-    <ion-button shape="round" (click)="openDatePicker()">
-      <ion-icon slot="icon-only" name="calendar"></ion-icon>
-    </ion-button>
+    <ion-row class="input-row">
+      <ion-input #dateInput appDateFormat [appDateFormat]="'DD-MM-YYYY'" placeholder="DD-MM-YYYY" [maxlength]="10" [(ngModel)]="dob" (ionInput)="onDateChange()"></ion-input>
+      <ion-button shape="round" (click)="openDatePicker()">
+        <ion-icon slot="icon-only" name="calendar"></ion-icon>
+      </ion-button>
+    </ion-row>
   </ion-item>
   <ion-card *ngIf="age">
     <ion-card-content>
